@@ -73,7 +73,7 @@ class IPynbRuleRepositoryTest {
       .map(p -> p.getFileName().toString())
       .filter(f -> f.endsWith("Check.java"))
       .filter(f -> !f.startsWith("Abstract"))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static RulesDefinition.Repository buildRepository() {
